nutype_test_suite/tests/ui/number/validate/duplicated.stderr
error: Duplicated validator `max`.
       You're a great engineer, but don't forget to take care of yourself!
 --> tests/ui/number/validate/duplicated.rs:3:28
  |
3 | #[nutype(validate(max = 0, max = 0))]
  |                            ^^^
